8317352: [Lilliput] Sync with upstreaming PRs
Reviewed-by: shade